# tracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
cl-src/: Shared.h  include.cl  material.cl  mbvh.cl  microfacet.cl  program.cl  random.cl  ray.cl  shade_mis.cl  shade_nee.cl  shade_raytracer.cl  shade_ref.cl  triangle.cl
cmake/: FindASSIMP.cmake  FindFreeImage.cmake  FindSDL2.cmake
programs/: bvh.cl  camera.cl  include.cl  material.cl  mbvh.cl  microfacet.cl  path-tracer.cl  program.cl  randomnumbers.cl  ray.cl  sphere.cl  triangle.cl
shaders/: quad.frag  quad.vert
src/: Application.cpp  Application.h  Main.cpp  Shared.h
src/BVH/: AABB.h  BVHNode.cpp  BVHNode.h  GameObject.cpp  GameObject.h  GameObjectNode.cpp  GameObjectNode.h  MBVHNode.cpp  MBVHNode.h  MBVHTree.cpp  MBVHTree.h  StaticBVHTree.cpp  StaticBVHTree.h  TopLevelBVH.cpp  TopLevelBVH.h
src/CL/: Buffer.cpp  Buffer.h  Device.cpp  Device.h  OpenCL.cpp  OpenCL.h
src/Core/: BVHRenderer.cpp  BVHRenderer.h  Camera.cpp  Camera.h  GpuTracer.cpp  GpuTracer.h  PathTracer.cpp  PathTracer.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Renderer.h  Scenes.cpp  Scenes.h  Surface.cpp  Surface.h  WFTracer.cpp  WFTracer.h
src/GL/: Buffer.cpp  Buffer.h  ComputeBuffer.cpp  ComputeBuffer.h  GLTools.cpp  GLTools.h  OpenCL.cpp  OpenCL.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Materials/: Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  MaterialMicrofacet.cpp  MaterialMicrofacet.h  Microfacet.h
src/Primitives/: GpuTriangleList.cpp  GpuTriangleList.h  Light.h  LightDirectional.cpp  LightDirectional.h  LightPoint.cpp  LightPoint.h  LightSpot.cpp  LightSpot.h  Model.cpp  Model.h  Plane.cpp  Plane.h  SOATriangle.h  SceneObject.h  SceneObjectList.cpp  SceneObjectList.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h  Triangle.cpp  Triangle.h  TriangleList.cpp  TriangleList.h
src/Renderer/: BVHRenderer.cpp  BVHRenderer.h  Camera.cpp  Camera.h  GpuTracer.cpp  GpuTracer.h  PathTracer.cpp  PathTracer.h  RayTracer.cpp  RayTracer.h  Renderer.h  Scenes.cpp  Scenes.h  Surface.h  surface.cpp
src/Utils/: GLFWWindow.cpp  GLFWWindow.h  MersenneTwister.h  Messages.cpp  Messages.h  RandomGenerator.h  SDLWindow.cpp  SDLWindow.h  Template.cpp  Template.h  Timer.h  Window.h  Xor128.cpp  Xor128.h  tiny_obj_loader.h
